; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_bme280.c_bme280_readoutdone.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_bme280.c_bme280_readoutdone.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"timer out\0A\00", align 1
@LUA_REGISTRYINDEX = common dso_local global i32 0, align 4
@lua_connected_readout_ref = common dso_local global i32 0, align 4
@bme280_timer = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @bme280_readoutdone to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bme280_readoutdone(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %4 = call i32 @NODE_DBG(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  %5 = call i32* (...) @lua_getstate()
  store i32* %5, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = load i32, i32* @LUA_REGISTRYINDEX, align 4
  %8 = load i32, i32* @lua_connected_readout_ref, align 4
  %9 = call i32 @lua_rawgeti(i32* %6, i32 %7, i32 %8)
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @lua_call(i32* %10, i32 0, i32 0)
  %12 = load i32*, i32** %3, align 8
  %13 = load i32, i32* @LUA_REGISTRYINDEX, align 4
  %14 = load i32, i32* @lua_connected_readout_ref, align 4
  %15 = call i32 @luaL_unref(i32* %12, i32 %13, i32 %14)
  %16 = call i32 @os_timer_disarm(i32* @bme280_timer)
  ret void
}

declare dso_local i32 @NODE_DBG(i8*) #1

declare dso_local i32* @lua_getstate(...) #1

declare dso_local i32 @lua_rawgeti(i32*, i32, i32) #1

declare dso_local i32 @lua_call(i32*, i32, i32) #1

declare dso_local i32 @luaL_unref(i32*, i32, i32) #1

declare dso_local i32 @os_timer_disarm(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
